// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-member-type should delete a member type 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-member-type should handle non-existent member type 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
